# basalt

./: .dockerignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json
.github/: actionlint.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  main.yml  pr-close.yml  spellcheck.yml
client/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
client/Models/: EditorModel.ts
client/app/: globals.css  layout.tsx  page.tsx  syntax.css
client/app/competitor/: QuestionNavbar.tsx  page.tsx
client/app/host/: AnnoucementForm.tsx  BulkTeamGen.tsx  HostPanel.tsx  QuestionAccordion.tsx  TeamInfo.tsx  TeamInspector.tsx  bulk-team-gen.tsx  page.tsx
client/app/leaderboard/: LeaderboardMenu.tsx  page.tsx
client/components/: AddTeamDialog.tsx  ChangeTeamPasswordDialog.tsx  CodeViewer.tsx  CompetitorNavbar.tsx  Diff.tsx  EditTeamDialog.tsx  Editor.tsx  Elapsed.tsx  HostNavbar.tsx  Leaderboard.tsx  Markdown.tsx  NoSSR.tsx  PauseGuard.tsx  QuestionDetails.tsx  Settings.tsx  Status.tsx  TestResults.tsx  Timer.tsx  UserMenu.tsx  util.tsx
client/components/ui/: accordion.tsx  breadcrumb.tsx  collapsible.tsx  dialog.tsx  progress.tsx  select.tsx  sheet.tsx  sidebar.tsx  (+2 more)
client/hooks/: use-clock.ts  use-teams.ts  use-toast.ts
client/lib/: api.ts  auth.ts  competitor-state.ts  host-state.ts  questions.ts  tauri.ts  types.ts  utils.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs
(+14 files in other folders)
