[package]
name = "basalt-desktop"
version = "1.0.0-rc.1"
description = "Basalt competitive programming client application"
authors = ["jackjohn7", "funnyboy-roks", "Erik-Claros", "AustinSAdams"]
license = "Apache-2.0"
repository = "https://github.com/basalt-rs/basalt"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2.0.0"
